css fix - removing white space on right side of page on mobile devices

--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,11 +1,19 @@
-.App {
-  min-height: 100%;
+html,body
+{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 
 body {
   box-sizing: border-box;
   background: #f0eded;
-  margin: 0;
+}
+
+.App {
+  min-height: 100%;
 }
 
 .container {
